# connect4

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  setup.cfg
connect4/: __init__.py  artist.py  board.py  game.py  player.py
docs/source/: changelog.rst  conf.py  index.rst  install.rst  quickstart.rst
docs/source/reference/api/: artist.rst  board.rst  game.rst  index.rst  player.rst
scripts/: connect4_dummy_vs_human.py  connect4_human_vs_human.py  connect4_short_sighted_AI_vs_human.py
tests/: test_board.py  test_game.py  test_player.py
