[metadata]
name = connect4
version = attr: connect4.__version__
description = Connect 4 Game
long_description = file: README.md
long_description_content_type = text/markdown
author = Niccolò Franceschi
author_email= niccolo.franceschi@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
python_requires = >= "3.9"
install_requires =
    numpy
    matplotlib


[options.extras_require]
test = pytest
linter = flake8
formatter = black
            isort
dev = pre-commit
      connect4[test, linter, formatter]

[isort]
profile=black

[options.packages.find]
exclude = tests, tests*
